--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "dompdf/dompdf": "^1.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.4",
+        "itsgoingd/clockwork": "^5.1",
         "khaled.alshamaa/ar-php": "^6.2",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
